Make the "basic skeleton" Bulma template page.

--- a/src/sphinx_bulma/sphinx_bulma_base.scss
+++ b/src/sphinx_bulma/sphinx_bulma_base.scss
@@ -1,1 +1,6 @@
+@import "node_modules/bulma/sass/utilities/initial-variables";
+
+$family-primary: $family-sans-serif;
+
 @import "node_modules/bulma/bulma";
+
