Correct the button padding/color in the toolbar. Fix the run_livereload watcher to not double-generate static.

--- a/src/sphinx_bulma/sphinx_bulma_base.scss
+++ b/src/sphinx_bulma/sphinx_bulma_base.scss
@@ -1,6 +1,12 @@
-@import "node_modules/bulma/sass/utilities/initial-variables";
+@import "../../node_modules/bulma/sass/utilities/initial-variables";
 
 $family-primary: $family-sans-serif;
 
-@import "node_modules/bulma/bulma";
+.nav-item .button + .button {
+  margin-left: 10px;
+}
+
+$info: $turquoise;
+
+@import "../../node_modules/bulma/bulma";
 
