Toolbar is looking ok.

--- a/src/sphinx_bulma/static/sphinx_bulma_base.css
+++ b/src/sphinx_bulma/static/sphinx_bulma_base.css
@@ -1,5 +1,23 @@
-.nav-item .button + .button {
-  margin-left: 10px; }
+.header-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)), url("https://images.unsplash.com/1/iphone-4-closeup.jpg?dpr=1&auto=format&crop=middle&fit=crop&w=2000&h=700&q=80"); }
+
+.is-outlined {
+  background-color: transparent;
+  border-color: #3273dc; }
+
+.hero-cta {
+  padding: 30px 0; }
+
+.panel-block.section p {
+  font-size: 17px;
+  line-height: 1.4;
+  color: #95A5A6; }
+
+.section.main {
+  background-color: #F0F0F0; }
+
+.icon-block {
+  font-size: 5em; }
 
 /*! bulma.io v0.4.2 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
@@ -399,10 +417,10 @@ a.has-text-primary:hover, a.has-text-primary:focus {
   color: #009e86; }
 
 .has-text-info {
-  color: #00d1b2; }
+  color: #3273dc; }
 
 a.has-text-info:hover, a.has-text-info:focus {
-  color: #009e86; }
+  color: #205bbc; }
 
 .has-text-success {
   color: #23d160; }
@@ -855,60 +873,60 @@ a.box:active {
         box-shadow: none;
         color: #fff; }
   .button.is-info {
-    background-color: #00d1b2;
+    background-color: #3273dc;
     border-color: transparent;
     color: #fff; }
     .button.is-info:hover, .button.is-info.is-hovered {
-      background-color: #00c4a7;
+      background-color: #276cda;
       border-color: transparent;
       color: #fff; }
     .button.is-info:focus, .button.is-info.is-focused {
       border-color: transparent;
-      box-shadow: 0 0 0.5em rgba(0, 209, 178, 0.25);
+      box-shadow: 0 0 0.5em rgba(50, 115, 220, 0.25);
       color: #fff; }
     .button.is-info:active, .button.is-info.is-active {
-      background-color: #00b89c;
+      background-color: #2366d1;
       border-color: transparent;
       box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2);
       color: #fff; }
     .button.is-info[disabled] {
-      background-color: #00d1b2;
+      background-color: #3273dc;
       border-color: transparent;
       box-shadow: none; }
     .button.is-info.is-inverted {
       background-color: #fff;
-      color: #00d1b2; }
+      color: #3273dc; }
       .button.is-info.is-inverted:hover {
         background-color: #f2f2f2; }
       .button.is-info.is-inverted[disabled] {
         background-color: #fff;
         border-color: transparent;
         box-shadow: none;
-        color: #00d1b2; }
+        color: #3273dc; }
     .button.is-info.is-loading:after {
       border-color: transparent transparent #fff #fff !important; }
     .button.is-info.is-outlined {
       background-color: transparent;
-      border-color: #00d1b2;
-      color: #00d1b2; }
+      border-color: #3273dc;
+      color: #3273dc; }
       .button.is-info.is-outlined:hover, .button.is-info.is-outlined:focus {
-        background-color: #00d1b2;
-        border-color: #00d1b2;
+        background-color: #3273dc;
+        border-color: #3273dc;
         color: #fff; }
       .button.is-info.is-outlined.is-loading:after {
-        border-color: transparent transparent #00d1b2 #00d1b2 !important; }
+        border-color: transparent transparent #3273dc #3273dc !important; }
       .button.is-info.is-outlined[disabled] {
         background-color: transparent;
-        border-color: #00d1b2;
+        border-color: #3273dc;
         box-shadow: none;
-        color: #00d1b2; }
+        color: #3273dc; }
     .button.is-info.is-inverted.is-outlined {
       background-color: transparent;
       border-color: #fff;
       color: #fff; }
       .button.is-info.is-inverted.is-outlined:hover, .button.is-info.is-inverted.is-outlined:focus {
         background-color: #fff;
-        color: #00d1b2; }
+        color: #3273dc; }
       .button.is-info.is-inverted.is-outlined[disabled] {
         background-color: transparent;
         border-color: #fff;
@@ -1327,7 +1345,7 @@ input[type="submit"].button {
     border-color: #00d1b2; }
   .input.is-info,
   .textarea.is-info {
-    border-color: #00d1b2; }
+    border-color: #3273dc; }
   .input.is-success,
   .textarea.is-success {
     border-color: #23d160; }
@@ -1473,7 +1491,7 @@ input[type="submit"].button {
   .select.is-primary select {
     border-color: #00d1b2; }
   .select.is-info select {
-    border-color: #00d1b2; }
+    border-color: #3273dc; }
   .select.is-success select {
     border-color: #23d160; }
   .select.is-warning select {
@@ -1539,7 +1557,7 @@ input[type="submit"].button {
   .help.is-primary {
     color: #00d1b2; }
   .help.is-info {
-    color: #00d1b2; }
+    color: #3273dc; }
   .help.is-success {
     color: #23d160; }
   .help.is-warning {
@@ -1852,7 +1870,7 @@ input[type="submit"].button {
     background-color: #00d1b2;
     color: #fff; }
   .notification.is-info {
-    background-color: #00d1b2;
+    background-color: #3273dc;
     color: #fff; }
   .notification.is-success {
     background-color: #23d160;
@@ -1903,9 +1921,9 @@ input[type="submit"].button {
   .progress.is-primary::-moz-progress-bar {
     background-color: #00d1b2; }
   .progress.is-info::-webkit-progress-value {
-    background-color: #00d1b2; }
+    background-color: #3273dc; }
   .progress.is-info::-moz-progress-bar {
-    background-color: #00d1b2; }
+    background-color: #3273dc; }
   .progress.is-success::-webkit-progress-value {
     background-color: #23d160; }
   .progress.is-success::-moz-progress-bar {
@@ -2012,7 +2030,7 @@ input[type="submit"].button {
     background-color: #00d1b2;
     color: #fff; }
   .tag.is-info {
-    background-color: #00d1b2;
+    background-color: #3273dc;
     color: #fff; }
   .tag.is-success {
     background-color: #23d160;
@@ -2461,13 +2479,13 @@ input[type="submit"].button {
       border-color: #00d1b2;
       color: #021310; }
   .message.is-info {
-    background-color: #f5fffd; }
+    background-color: #f6f9fe; }
     .message.is-info .message-header {
-      background-color: #00d1b2;
+      background-color: #3273dc;
       color: #fff; }
     .message.is-info .message-body {
-      border-color: #00d1b2;
-      color: #021310; }
+      border-color: #3273dc;
+      color: #22509a; }
   .message.is-success {
     background-color: #f6fef9; }
     .message.is-success .message-header {
@@ -4060,7 +4078,7 @@ label.panel-block {
       .hero.is-primary .nav-menu .nav-item {
         border-top-color: rgba(255, 255, 255, 0.2); } }
   .hero.is-info {
-    background-color: #00d1b2;
+    background-color: #3273dc;
     color: #fff; }
     .hero.is-info a:not(.button),
     .hero.is-info strong {
@@ -4076,7 +4094,7 @@ label.panel-block {
       box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2); }
     @media screen and (max-width: 768px) {
       .hero.is-info .nav-menu {
-        background-color: #00d1b2; } }
+        background-color: #3273dc; } }
     .hero.is-info a.nav-item,
     .hero.is-info .nav-item a:not(.button) {
       color: rgba(255, 255, 255, 0.7); }
@@ -4098,12 +4116,12 @@ label.panel-block {
     .hero.is-info .tabs.is-boxed li.is-active a, .hero.is-info .tabs.is-boxed li.is-active a:hover, .hero.is-info .tabs.is-toggle li.is-active a, .hero.is-info .tabs.is-toggle li.is-active a:hover {
       background-color: #fff;
       border-color: #fff;
-      color: #00d1b2; }
+      color: #3273dc; }
     .hero.is-info.is-bold {
-      background-image: linear-gradient(141deg, #009e6c 0%, #00d1b2 71%, #00e7eb 100%); }
+      background-image: linear-gradient(141deg, #1577c6 0%, #3273dc 71%, #4366e5 100%); }
       @media screen and (max-width: 768px) {
         .hero.is-info.is-bold .nav-menu {
-          background-image: linear-gradient(141deg, #009e6c 0%, #00d1b2 71%, #00e7eb 100%); } }
+          background-image: linear-gradient(141deg, #1577c6 0%, #3273dc 71%, #4366e5 100%); } }
     @media screen and (max-width: 768px) {
       .hero.is-info .nav-toggle span {
         background-color: #fff; }
