--- a/src/sphinx_bulma/sphinx_bulma_base.scss
+++ b/src/sphinx_bulma/sphinx_bulma_base.scss
@@ -1,12 +1,33 @@
 @import "../../node_modules/bulma/sass/utilities/initial-variables";
 
 $family-primary: $family-sans-serif;
+$color-invert: $blue;
 
-.nav-item .button + .button {
-  margin-left: 10px;
+.header-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)), url('https://images.unsplash.com/1/iphone-4-closeup.jpg?dpr=1&auto=format&crop=middle&fit=crop&w=2000&h=700&q=80');
 }
 
-$info: $turquoise;
+.is-outlined {
+  background-color: transparent;
+  border-color: $color-invert;
+}
+
+.hero-cta {
+  padding: 30px 0;
+}
+
+.panel-block.section p {
+  font-size: 17px;
+  line-height: 1.4;
+  color: #95A5A6;
+}
+
+.section.main {
+  background-color: #F0F0F0;
+}
+
+.icon-block {
+  font-size: 5em;
+}
 
 @import "../../node_modules/bulma/bulma";
-
