Make things dynamic from the home page and a real page.

--- a/src/sphinx_bulma/sphinx_bulma_base.scss
+++ b/src/sphinx_bulma/sphinx_bulma_base.scss
@@ -2,6 +2,7 @@
 
 $family-primary: $family-sans-serif;
 $color-invert: $blue;
+$primary: $blue;
 
 .header-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)), url('https://images.unsplash.com/1/iphone-4-closeup.jpg?dpr=1&auto=format&crop=middle&fit=crop&w=2000&h=700&q=80');
@@ -33,9 +34,12 @@ $color-invert: $blue;
 .nav-item .search .field .control {
   margin-top: 12px;
   .input {
-    background-color: $grey-darker;
-    color: $grey-light;
+    background-color: $grey-light;
+    color: $grey;
     border: $grey-dark;
+  }
+  .fa {
+    color: $grey-dark;
   }
 }
 
