--- a/src/sphinx_bulma/static/sphinx_bulma.css
+++ b/src/sphinx_bulma/static/sphinx_bulma.css
@@ -1,33 +1,3 @@
-.header-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)), url("https://images.unsplash.com/1/iphone-4-closeup.jpg?dpr=1&auto=format&crop=middle&fit=crop&w=2000&h=700&q=80"); }
-
-.is-outlined {
-  background-color: transparent;
-  border-color: #3273dc; }
-
-.hero-cta {
-  padding: 30px 0; }
-
-.panel-block.section p {
-  font-size: 17px;
-  line-height: 1.4;
-  color: #95A5A6; }
-
-.section.main {
-  background-color: #F0F0F0; }
-
-.icon-block {
-  font-size: 5em; }
-
-.nav-item .search .field .control {
-  margin-top: 12px; }
-  .nav-item .search .field .control .input {
-    background-color: #b5b5b5;
-    color: #7a7a7a;
-    border: #4a4a4a; }
-  .nav-item .search .field .control .fa {
-    color: #4a4a4a; }
-
 /*! bulma.io v0.4.2 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
   from {
@@ -4331,3 +4301,36 @@ label.panel-block {
 .footer {
   background-color: whitesmoke;
   padding: 3rem 1.5rem 6rem; }
+
+.sb-header-search {
+  display: none; }
+
+.header-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)), url("https://images.unsplash.com/1/iphone-4-closeup.jpg?dpr=1&auto=format&crop=middle&fit=crop&w=2000&h=700&q=80"); }
+
+.is-outlined {
+  background-color: transparent;
+  border-color: #3273dc; }
+
+.hero-cta {
+  padding: 30px 0; }
+
+.panel-block.section p {
+  font-size: 17px;
+  line-height: 1.4;
+  color: #95A5A6; }
+
+.section.main {
+  background-color: #F0F0F0; }
+
+.icon-block {
+  font-size: 5em; }
+
+.nav-item .search .field .control {
+  margin-top: 12px; }
+  .nav-item .search .field .control .input {
+    background-color: #b5b5b5;
+    color: #7a7a7a;
+    border: #4a4a4a; }
+  .nav-item .search .field .control .fa {
+    color: #4a4a4a; }
