--- a/src/sphinx_bulma/static/sphinx_bulma.css
+++ b/src/sphinx_bulma/static/sphinx_bulma.css
@@ -4348,5 +4348,14 @@ label.panel-block {
 
 .sb-article .menu ul {
   list-style: none;
-  margin: 0;
+  margin: 10px;
   padding: 0; }
+
+@media screen and (max-width: 769px) {
+  .ordered-mobile {
+    display: flex;
+    flex-flow: column; }
+  .ordered-mobile .fl-1 {
+    order: 1; }
+  .ordered-mobile .fl-2 {
+    order: 2; } }
