--- a/src/sphinx_bulma/navbar/_navbar.scss
+++ b/src/sphinx_bulma/navbar/_navbar.scss
@@ -28,3 +28,7 @@
 .hero.is-info .hero-head .nav-item.is-active {
   border-bottom: 2px solid $info-invert;
 }
+
+.header-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)), url('https://images.unsplash.com/1/iphone-4-closeup.jpg?dpr=1&auto=format&crop=middle&fit=crop&w=2000&h=700&q=80');
+}
