The series listing.

--- a/src/sphinx_bulma/navbar/_navbar.scss
+++ b/src/sphinx_bulma/navbar/_navbar.scss
@@ -130,3 +130,11 @@
 .sb_sidenav {
   font-size: $size-small;
 }
+
+.sb-section-heading {
+  border-bottom: 1px solid gray;
+}
+
+.sb-listing p {
+  margin-bottom: 1rem;
+}
