--- a/src/sphinx_bulma/navbar/_navbar.scss
+++ b/src/sphinx_bulma/navbar/_navbar.scss
@@ -1,53 +1,56 @@
 @import "../../../node_modules/bulma/sass/utilities/variables";
 
 // All nav elements should get a grey border when hovered
-.hero .hero-head .nav-item:hover {
+.sb-header.hero .hero-head .nav-item:hover {
   border-bottom: 2px solid $grey;
 }
 
 // For each color scheme, make "active" the invert
-.hero.is-primary .hero-head .nav-item.is-active {
+.sb-header.hero.is-primary .hero-head .nav-item.is-active {
   border-bottom: 2px solid $primary-invert;
 }
 
-.hero.is-info .hero-head .nav-item.is-active {
+.sb-header.hero.is-info .hero-head .nav-item.is-active {
   border-bottom: 2px solid $info-invert;
 }
 
-.hero.is-success .hero-head .nav-item.is-active {
+.sb-header.hero.is-success .hero-head .nav-item.is-active {
   border-bottom: 2px solid $success-invert;
 }
 
-.hero.is-warning .hero-head .nav-item.is-active {
+.sb-header.hero.is-warning .hero-head .nav-item.is-active {
   border-bottom: 2px solid $warning-invert;
 }
 
-.hero.is-danger .hero-head .nav-item.is-active {
+.sb-header.hero.is-danger .hero-head .nav-item.is-active {
   border-bottom: 2px solid $danger-invert;
 }
 
-.hero.is-light .hero-head .nav-item.is-active {
+.sb-header.hero.is-light .hero-head .nav-item.is-active {
   border-bottom: 2px solid $light-invert;
 }
 
-.hero.is-dark .hero-head .nav-item.is-active {
+.sb-header.hero.is-dark .hero-head .nav-item.is-active {
   border-bottom: 2px solid $dark-invert;
 }
 
-.hero.is-info .hero-head .nav-item.is-active {
+.sb-header.hero.is-info .hero-head .nav-item.is-active {
   border-bottom: 2px solid $info-invert;
 }
 
-.header-image {
+.sb-header.header-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.89)), url('https://images.unsplash.com/1/iphone-4-closeup.jpg?dpr=1&auto=format&crop=middle&fit=crop&w=2000&h=700&q=80');
 }
 
-.panel-block {
-  font-size: $size-small;
+// Portlets
+.sb-portlet {
+  .panel-block {
+    font-size: $size-small;
+  }
 }
 
 .sb-listing-title a {
-  color: inherit;
+  color: $link;
 }
 
 .sb-listing-synopsis {
